# oatpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  cpack.cmake  lgtm.yml
src/: CMakeLists.txt  MSVCStaticRuntime.cmake  module-install.cmake  package.cmake.in
src/oatpp/: Environment.cpp  Environment.hpp  IODefinitions.hpp  Types.hpp  compiler.hpp
src/oatpp-test/: Checker.cpp  Checker.hpp  UnitTest.cpp  UnitTest.hpp
src/oatpp-test/web/: ClientServerTestRunner.cpp  ClientServerTestRunner.hpp
src/oatpp/algorithm/: CRC.cpp  CRC.hpp
src/oatpp/async/: Coroutine.cpp  Coroutine.hpp  CoroutineWaitList.hpp  Error.cpp  Error.hpp  Executor.cpp  Executor.hpp  Processor.cpp  Processor.hpp
src/oatpp/async/utils/: FastQueue.hpp
src/oatpp/async/worker/: IOEventWorker.hpp  IOEventWorker_common.cpp  IOEventWorker_epoll.cpp  IOEventWorker_kqueue.cpp  IOEventWorker_stub.cpp  IOWorker.cpp  IOWorker.hpp  TimerWorker.cpp  TimerWorker.hpp  Worker.cpp  Worker.hpp
src/oatpp/base/: CommandLineArguments.hpp  Compiler.hpp  Countable.hpp  Log.cpp  Log.hpp  ObjectHandle.hpp
src/oatpp/codegen/: ApiClient_define.hpp  ApiClient_undef.hpp  ApiController_define.hpp  ApiController_undef.hpp  DTO_define.hpp  DTO_undef.hpp  DbClient_define.hpp  DbClient_undef.hpp  codegen_define_ApiClient_.hpp  codegen_define_ApiController_.hpp  codegen_define_DTO_.hpp  codegen_undef_ApiClient_.hpp  codegen_undef_ApiController_.hpp  codegen_undef_DTO_.hpp
src/oatpp/codegen/api_controller/: auth_define.hpp  auth_undef.hpp  base_define.hpp  base_undef.hpp  bundle_define.hpp  bundle_undef.hpp  cors_define.hpp  cors_undef.hpp
src/oatpp/codegen/dto/: base_define.hpp  base_undef.hpp  enum_define.hpp  enum_undef.hpp
src/oatpp/concurrency/: SpinLock.hpp  Utils.cpp  Utils.hpp
src/oatpp/core/: IODefinitions.cpp  IODefinitions.hpp  Types.cpp  Types.hpp
src/oatpp/core/async/: ConditionVariable.cpp  ConditionVariable.hpp  Coroutine.cpp  Coroutine.hpp  CoroutineWaitList.cpp  CoroutineWaitList.hpp  Error.cpp  Error.hpp  Executor.cpp  Executor.hpp  Future.hpp  IOWorker.cpp  IOWorker.hpp  Lock.cpp  Lock.hpp  Processor.cpp  Processor.hpp  Scheduler.cpp  Scheduler.hpp  TimerWorker.cpp  TimerWorker.hpp  Worker.cpp  Worker.hpp
src/oatpp/core/base/: CommandLineArguments.cpp  CommandLineArguments.hpp  Config.hpp  Controllable.cpp  Controllable.hpp  Countable.cpp  Countable.hpp  Environment.cpp  Environment.hpp  ObjectHandle.hpp  StrBuffer.cpp  StrBuffer.hpp
src/oatpp/core/collection/: FastQueue.cpp  FastQueue.hpp  (+4 more)
src/oatpp/data/: Bundle.hpp  ObjectToTreeMapper.cpp  ObjectToTreeMapper.hpp  Tree.cpp  Tree.hpp  TreeToObjectMapper.cpp  TreeToObjectMapper.hpp
src/oatpp/database/: Connection.hpp  DbClient.cpp  DbClient.hpp  Executor.cpp  Executor.hpp  QueryResult.cpp  QueryResult.hpp
src/oatpp/db/: Client.cpp  Client.hpp  Executor.cpp  Executor.hpp  QueryResult.cpp  QueryResult.hpp
src/oatpp/encoding/: Base64.cpp  Base64.hpp  Hex.cpp  Hex.hpp  Unicode.cpp  Unicode.hpp  Url.cpp  Url.hpp
src/oatpp/json/: Beautifier.cpp  Beautifier.hpp  Deserializer.cpp  Deserializer.hpp  ObjectMapper.cpp  ObjectMapper.hpp  Serializer.cpp  Serializer.hpp  Utils.cpp  Utils.hpp
src/oatpp/macro/: codegen.hpp  component.hpp
src/oatpp/network/: Address.cpp  Address.hpp  BufferedConnection.cpp  BufferedConnection.hpp  BufferedUDPConnection.cpp  BufferedUDPConnection.hpp  Connection.cpp  Connection.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  ConnectionMonitor.cpp  ConnectionMonitor.hpp  ConnectionPool.cpp  ConnectionPool.hpp  ConnectionProvider.cpp  ConnectionProvider.hpp  ConnectionProviderSwitch.cpp  ConnectionProviderSwitch.hpp  Server.cpp  Server.hpp  Url.cpp  Url.hpp
src/oatpp/orm/: Connection.hpp  DbClient.cpp  DbClient.hpp  Executor.cpp  Executor.hpp  QueryResult.cpp  QueryResult.hpp  SchemaMigration.cpp  SchemaMigration.hpp  Transaction.cpp  Transaction.hpp
src/oatpp/provider/: Pool.hpp  Provider.hpp
src/oatpp/ql/: Client.cpp  Client.hpp  Executor.cpp  Executor.hpp
src/oatpp/utils/: Binary.hpp  CRC32.cpp  CRC32.hpp  Conversion.cpp  Conversion.hpp  Random.cpp  Random.hpp  String.hpp
test/: AllTestsMain.cpp  CMakeLists.txt  Checker.hpp  UnitTest.cpp  UnitTest.hpp
test/core/base/: CommandLineArgumentsTest.cpp  CommandLineArgumentsTest.hpp  RegRuleTest.cpp  RegRuleTest.hpp
test/encoding/: Base64Test.cpp  Base64Test.hpp  UnicodeTest.cpp  UnicodeTest.hpp
test/fuzzers/: json-fuzz.cpp
test/network/virtual_/: InterfaceTest.cpp  InterfaceTest.hpp  PipeTest.cpp  PipeTest.hpp
test/oatpp/: AllTestsMain.cpp  LoggerTest.cpp  LoggerTest.hpp
test/oatpp/async/: ConditionVariableTest.cpp  ConditionVariableTest.hpp  LockTest.cpp  LockTest.hpp
test/oatpp/base/: CommandLineArgumentsTest.cpp  CommandLineArgumentsTest.hpp  LogTest.cpp  LogTest.hpp
test/oatpp/data/: TreeTest.cpp  TreeTest.hpp  TreeToObjectMapperTest.cpp  TreeToObjectMapperTest.hpp
test/oatpp/encoding/: Base64Test.cpp  Base64Test.hpp  HexTest.cpp  HexTest.hpp  UnicodeTest.cpp  UnicodeTest.hpp  UrlTest.cpp  UrlTest.hpp
test/oatpp/json/: BooleanTest.cpp  BooleanTest.hpp  DTOMapperPerfTest.cpp  DTOMapperPerfTest.hpp  DTOMapperTest.cpp  DTOMapperTest.hpp  DeserializerTest.cpp  DeserializerTest.hpp  EnumTest.cpp  EnumTest.hpp  UnorderedSetTest.cpp  UnorderedSetTest.hpp
test/oatpp/network/: ConnectionMonitorTest.cpp  ConnectionMonitorTest.hpp  ConnectionPoolTest.cpp  ConnectionPoolTest.hpp  UrlTest.cpp  UrlTest.hpp
test/oatpp/provider/: PoolTemplateTest.cpp  PoolTemplateTest.hpp  PoolTest.cpp  PoolTest.hpp
test/oatpp/web/: ClientRetryTest.cpp  ClientRetryTest.hpp  FullAsyncClientTest.cpp  FullAsyncClientTest.hpp  FullAsyncTest.cpp  FullAsyncTest.hpp  FullTest.cpp  FullTest.hpp  PipelineAsyncTest.cpp  PipelineAsyncTest.hpp  PipelineTest.cpp  PipelineTest.hpp
test/web/: FullAsyncTest.cpp  FullAsyncTest.hpp  FullTest.cpp  FullTest.hpp
test/web/app/: Client.hpp  Controller.hpp  ControllerAsync.hpp  DTOs.hpp
test/web/server/: BindAndServeMultithreadedTest.cpp  BindAndServeMultithreadedTest.hpp
(+966 files in other folders)
